--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "vite build --config vite.config.ts",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
+
 
   },
   "dependencies": {
