--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "start": "set NODE_ENV=production && tsx server/index.ts",
     "build": "vite build --config vite.config.ts",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-
-
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
