--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "aahasuvai",
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://abinayamarappan.github.io/Aahasuvai",
-
   "scripts": {
     "dev": "set NODE_ENV=development && tsx server/index.ts",
     "start": "set NODE_ENV=production && tsx server/index.ts",
@@ -36,7 +34,7 @@
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.18.0",
     "gh-pages": "^6.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.292.0",
@@ -45,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.30.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.0.0",
@@ -59,6 +58,7 @@
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
